# CppFuse

./: .gitignore  .gitmodules  CMakeLists.txt  FindByName.cpp  README.md  Start.sh  main.cpp
.github/workflows/: cccc.yml
Controllers/: TFileSystem.cpp  TFileSystem.hpp
CppFuse/Controllers/: TFileSystem.hpp
CppFuse/Models/: TDirectory.cpp  TDirectory.hpp  TFileObjectMixin.hpp  TLink.cpp  TLink.hpp
DocumentationUA/: .~lock.Керівництво користувача.odt#  .~lock.Пояснювальна записка.odt#  Dyplom_metod_2024.odt  OP_КР_2022.odt  UseCaseDiagram.mdj  code.txt  file_type_to_txt.py  merge_pdf.py  ІП_11_Панченко_КР_шаблон_ч1_ТЗ_2023(2).docx  Анотація English.odt  Анотація.odt  Відомість.odt  Завдання та календарний план.odt  Керівництво користувача.odt  Опис програми шаблон.odt  Опис програми.odt  План аналізу предметної галузі.odt  Пояснювальна записка без титулки.odt  Пояснювальна записка.odt  Приклади використання.odt  Програма та методика тестування.odt  Технічне завдання.odt  Титульний лист.odt
DocumentationUA/Conferences/: Панченко_Сергій_Віталійович_Секція_3.docx
DocumentationUA/Examples/: .~lock.КР_шаблон_ч2_ПЗ_2023.docx#  КР_Anotazia_2023.doc  КР_Title_2023.doc  КР_Vidomist_2023.doc  КР_zavdannya_2023.doc  КР_шаблон_ч1_ТЗ_2023.docx  КР_шаблон_ч2_ПЗ_2023.docx  КР_шаблон_ч3_ТекстПрограми_2023.docx  КР_шаблон_ч4__ПМТ_2023.docx  КР_шаблон_ч5_КК_2023.docx
DocumentationUkr/: Панченко_Методика_Тестування.odt  План аналізу предметної галузі.docx
DocumentationUkr/Conferences/: Панченко_Сергій_Віталійович_Секція_3.odt
Errors/: NNFSExceptionType.hpp  TFSException.cpp  TFSException.hpp
Models/: NNFileType.hpp  TCommonDeclarations.hpp  TDirectory.cpp  TDirectory.hpp  TFile.cpp  TFile.hpp  TFileObjectMixin.hpp  TFileSystemObject.cpp  TFileSystemObject.hpp  THardLink.hpp  TLink.cpp  TLink.hpp  TObjectMixin.hpp  TSpecializedObjectMixin.hpp
Scripts/: CppFuseFind.sh  MountFuse.sh
Source/CppFuse/Controllers/: NSAccessFile.cpp  NSAccessFile.hpp  NSCommonOperations.cpp  NSCommonOperations.hpp  NSDeleteFile.cpp  NSDeleteFile.hpp  NSFileAttributes.cpp  NSFileAttributes.hpp  NSFileType.hpp  NSFindFile.cpp  NSFindFile.hpp  TDeleteFile.cpp  TDeleteFile.hpp  TFileSystem.cpp  TFileSystem.hpp  TFindFile.cpp  TFindFile.hpp  TFinder.cpp  TFinder.hpp  TGetFileAttributes.cpp  TGetFileAttributes.hpp  TGetFileParameter.hpp  TGetFileType.hpp  TReadDirectory.cpp  TReadDirectory.hpp  TSetFileParameter.hpp
Source/CppFuse/Errors/: NNFSExceptionType.hpp  TFSException.cpp  TFSException.hpp
Source/CppFuse/Helpers/: ASharedLock.hpp  NSHelperFuncs.cpp  NSHelperFuncs.hpp  SOverloadVariant.hpp
Source/CppFuse/Models/: ASharedFileVariant.hpp  NNFileAccess.hpp  NNFileType.hpp  SDirectory.cpp  SDirectory.hpp  SFile.cpp  SFile.hpp  SInfo.hpp  SInfoMixin.hpp  SLink.cpp  SLink.hpp  TDirectory.cpp  TDirectory.hpp  TFile.cpp  TFile.hpp  TFileObjectMixin.hpp  TFileObjects.cpp  TFileObjects.hpp  TFileSystemObjects.cpp  TFileSystemObjects.hpp  TGetParameter.cpp  TGetParameter.hpp  TLink.cpp  TLink.hpp  TSetParameter.cpp  TSetParameter.hpp
Source/CppFuse/Models/Aliases/: ASharedFileVariant.hpp
Source/CppFuse/Models/Concepts/: CFileObject.hpp  CRwGuardFileObject.hpp  CSharedRwFileObject.hpp
Source/CppFuse/Models/Objects/: ASharedFileVariant.hpp  NNFileType.hpp  (+11 more)
Source/CppFuse/Views/: TFileSystemCLI.cpp  TFileSystemCLI.hpp  TFileSystemClientCLI.cpp  TFileSystemClientCLI.hpp
Tests/: CMakeLists.txt  GeneralTest.cpp  ProductivityFindTest.cpp  SpeedUpTest.cpp  test.cpp
(+16 files in other folders)
